Created Mongoose Schema and seeded data

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This assessment measures your understanding of MongoDB and your capability to implement its features in a practical manner. You have creative freedom in the topic, material, and purpose of the web application you will be developing, so have fun with it! However, remember to plan the scope of your project to the timeline you have been given.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node ./utilities/seed.js"
   },
   "repository": {
     "type": "git",
